force-app/main/default/objects/SmokeTestExecution__c/SmokeTestExecution__c.object-meta.xml
<!-- Data Classification: Internal | Retention: 90 days | Purge: Database.emptyRecycleBin() via scheduled batch -->
<CustomObject>
    <description>Master record for each Salesforce post-deployment smoke test execution. Tracks overall lifecycle, timing, trigger source, and aggregate scenario results. Data Classification: Internal. Retention: 90 days.</description>
    <label>Smoke Test Execution</label>
    <nameField>
        <displayFormat>EXEC-{0000}</displayFormat>
        <label>Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Smoke Test Executions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <indexes>
        <fullName>Status_Index</fullName>
        <label>Status Index</label>
        <fields>
            <name>Status__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
    </indexes>
    <indexes>
        <fullName>StartTime_Index</fullName>
        <label>Start Time Index</label>
        <fields>
            <name>StartTime__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
    </indexes>
</CustomObject>