force-app/main/default/objects/SmokeTestExecution__c/fields/CircuitBreakerState__c.field-meta.xml
<CustomField>
    <fullName>CircuitBreakerState__c</fullName>
    <description>JSON blob persisting the circuit breaker in-memory state across Queueable chain links. Format: {"consecutiveGovernorFailures": 2, "circuitOpen": false}. Written by CircuitBreakerService.saveState() and read by CircuitBreakerService.loadState().</description>
    <label>Circuit Breaker State</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>