force-app/main/default/objects/SmokeTestExecution__c/fields/CircuitBreakerTripped__c.field-meta.xml
<CustomField>
    <fullName>CircuitBreakerTripped__c</fullName>
    <description>Set to true when the orchestrator circuit breaker paused execution after 3 consecutive governor limit failures. Remaining scenarios were not executed.</description>
    <defaultValue>false</defaultValue>
    <label>Circuit Breaker Tripped</label>
    <type>Checkbox</type>
</CustomField>