force-app/main/default/objects/SmokeTestExecution__c/fields/DeploymentId__c.field-meta.xml
<CustomField>
    <fullName>DeploymentId__c</fullName>
    <description>Salesforce deployment job ID or CI/CD pipeline run ID that triggered this execution. Set as external ID for efficient correlation lookups. Indexed.</description>
    <externalId>true</externalId>
    <label>Deployment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>