force-app/main/default/objects/SmokeTestExecution__c/fields/DeploymentManifest__c.field-meta.xml
<CustomField>
    <fullName>DeploymentManifest__c</fullName>
    <description>JSON array of {name, type} objects listing every metadata component in the deployment package. Parsed by DeploymentManifestParser and used by MetadataIntegrityService to verify post-deployment component state via the Tooling API. Format: [{"name":"MyClass","type":"ApexClass"},...]</description>
    <label>Deployment Manifest</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>