force-app/main/default/objects/SmokeTestExecution__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>UTC timestamp when the smoke test execution completed, failed, or was aborted.</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>