force-app/main/default/objects/SmokeTestExecution__c/fields/ExecutionTimeMs__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTimeMs__c</fullName>
    <description>Total wall-clock execution time for the full smoke test suite in milliseconds.</description>
    <label>Execution Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>