force-app/main/default/objects/SmokeTestExecution__c/fields/FailedScenarios__c.field-meta.xml
<CustomField>
    <fullName>FailedScenarios__c</fullName>
    <description>Count of scenarios that completed with Status Fail, Error, or Timeout.</description>
    <label>Failed Scenarios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>