force-app/main/default/objects/SmokeTestExecution__c/fields/InitiatedBy__c.field-meta.xml
<CustomField>
    <fullName>InitiatedBy__c</fullName>
    <description>Salesforce User who triggered this execution. Null for system-triggered executions (Platform Event, scheduled job). Lookup (not Master-Detail) to allow null.</description>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Smoke Test Executions</relationshipLabel>
    <relationshipName>SmokeTestExecutions</relationshipName>
    <type>Lookup</type>
</CustomField>