force-app/main/default/objects/SmokeTestExecution__c/fields/OverallResult__c.field-meta.xml
<CustomField>
    <fullName>OverallResult__c</fullName>
    <description>Aggregate pass/fail verdict for the execution. Pass = all scenarios passed. Fail = one or more critical scenarios failed. Partial = some scenarios failed but no critical failures.</description>
    <label>Overall Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>