force-app/main/default/objects/SmokeTestExecution__c/fields/PassedScenarios__c.field-meta.xml
<CustomField>
    <fullName>PassedScenarios__c</fullName>
    <description>Count of scenarios that completed with Status Pass.</description>
    <label>Passed Scenarios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>