force-app/main/default/objects/SmokeTestExecution__c/fields/RollbackPolicy__c.field-meta.xml
<CustomField>
    <fullName>RollbackPolicy__c</fullName>
    <description>Rollback policy active for this execution. Overrides the global SmokeTestConfig__mdt setting when set.</description>
    <label>Rollback Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommend Only</fullName>
                <default>true</default>
                <label>Recommend Only</label>
            </value>
            <value>
                <fullName>Auto-Rollback</fullName>
            </value>
            <value>
                <fullName>Manual Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>