force-app/main/default/objects/SmokeTestExecution__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>UTC timestamp when the smoke test execution started. Indexed for retention purge queries.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>