force-app/main/default/objects/SmokeTestExecution__c/fields/TargetOrg__c.field-meta.xml
<CustomField>
    <fullName>TargetOrg__c</fullName>
    <description>Salesforce org identifier or alias that was the target of this smoke test execution.</description>
    <label>Target Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>