force-app/main/default/objects/SmokeTestExecution__c/fields/TotalScenarios__c.field-meta.xml
<CustomField>
    <fullName>TotalScenarios__c</fullName>
    <description>Total number of smoke test scenarios configured for this execution.</description>
    <label>Total Scenarios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>