force-app/main/default/objects/SmokeTestExecution__c/fields/TriggerSource__c.field-meta.xml
<CustomField>
    <fullName>TriggerSource__c</fullName>
    <description>How this smoke test execution was initiated.</description>
    <label>Trigger Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REST API</fullName>
            </value>
            <value>
                <fullName>CLI</fullName>
            </value>
            <value>
                <fullName>Platform Event</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>