force-app/main/default/objects/SmokeTestExecution__c/fields/WebhookCallbackUrl__c.field-meta.xml
<CustomField>
    <fullName>WebhookCallbackUrl__c</fullName>
    <description>Optional HTTPS callback URL registered by the CI/CD pipeline to receive results upon completion. HMAC-SHA256 signed payload will be POSTed to this URL. Must be HTTPS.</description>
    <label>Webhook Callback URL</label>
    <type>Url</type>
</CustomField>